force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/tc9_pr__Superannuation_Fund__c.object-meta.xml
<CustomObject>
    <description>Maintain superannuation fund details for select on Payee records.</description>
    <label>Superannuation Fund</label>
    <nameField>
        <displayFormat>SF-{000000}</displayFormat>
        <label>Superannuation Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Superannuation Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>