force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_eau__External_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Fund Id in an external provider system</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>