force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_eau__Fund_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Fund_Contact_Name__c</fullName>
    <label>Fund Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>