force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Default_Employer_Fund_Category__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Default_Employer_Fund_Category__c</fullName>
    <description>For employers with multiple default funds this restricts which default fund category the payee can select</description>
    <inlineHelpText>For employers with multiple default funds this restricts which default fund category the payee can select</inlineHelpText>
    <label>Default Employer Fund Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Default_Employer_Fund_Category</valueSetName>
    </valueSet>
</CustomField>