force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Default_Superannuation_Fund__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Default_Superannuation_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The nominated default fund for the Payment Entity and Default Employer Fund Category</description>
    <inlineHelpText>The nominated default fund for the Payment Entity and Default Employer Fund Category</inlineHelpText>
    <label>Default Superannuation Fund</label>
    <referenceTo>tc9_pr__Superannuation_Fund__c</referenceTo>
    <relationshipLabel>Default Superannuation Fund</relationshipLabel>
    <relationshipName>Superannuation_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>