force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Fund_ABN__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fund_ABN__c</fullName>
    <description>The Australian Business Number of this Superannuation Fund.</description>
    <inlineHelpText>The Australian Business Number of this Superannuation Fund.</inlineHelpText>
    <label>Fund ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>