force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Fund_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fund_Account_Name__c</fullName>
    <description>The bank account name of this Superannuation Fund.</description>
    <inlineHelpText>The bank account name of this Superannuation Fund.</inlineHelpText>
    <label>Fund Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>