force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Fund_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fund_Account_Number__c</fullName>
    <description>The bank account number of this Superannuation Fund.</description>
    <inlineHelpText>The bank account number of this Superannuation Fund.</inlineHelpText>
    <label>Fund Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>