force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Fund_Branch__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fund_Branch__c</fullName>
    <description>The branch code of this Superannuation Fund.</description>
    <inlineHelpText>The branch code of this Superannuation Fund.</inlineHelpText>
    <label>Fund Branch Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>