force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Fund_City__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fund_City__c</fullName>
    <description>City of the registered address.</description>
    <inlineHelpText>City of the registered address.</inlineHelpText>
    <label>Fund City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>