force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Fund_Country__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fund_Country__c</fullName>
    <description>Country of the registered address.</description>
    <inlineHelpText>Country of the registered address.</inlineHelpText>
    <label>Fund Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>