force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Fund_Electronic_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fund_Electronic_Service_Address__c</fullName>
    <description>The Electronic Service Address of this Self Managed Super Fund.</description>
    <inlineHelpText>The Electronic Service Address of this Self Managed Super Fund.</inlineHelpText>
    <label>Fund Electronic Service Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>