force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Fund_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fund_Email__c</fullName>
    <description>Email address of this Superannuation Fund.</description>
    <inlineHelpText>Email address of this Superannuation Fund.</inlineHelpText>
    <label>Fund Email</label>
    <type>Email</type>
</CustomField>