force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fund_Name__c</fullName>
    <description>The name of this Superannuation Fund.</description>
    <inlineHelpText>The name of this Superannuation Fund.</inlineHelpText>
    <label>Fund Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>