force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Fund_State_Province__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fund_State_Province__c</fullName>
    <description>State/Province of the registered address.</description>
    <inlineHelpText>State/Province of the registered address.</inlineHelpText>
    <label>Fund State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>