force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Fund_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fund_Zip_Postal_Code__c</fullName>
    <description>Postal Code of the registered address.</description>
    <inlineHelpText>Postal Code of the registered address.</inlineHelpText>
    <label>Fund Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>