force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Integration_External_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Integration_External_Id__c</fullName>
    <description>Defines the ID of the corresponding record in an external system that has been used to create/update the record. Using in integrations.</description>
    <externalId>true</externalId>
    <inlineHelpText>Defines the ID of the corresponding record in an external system that has been used to create/update the record. Using in integrations.</inlineHelpText>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>