force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Last_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Last_Validation_Date__c</fullName>
    <label>Last Validation Date</label>
    <type>DateTime</type>
</CustomField>