force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Parent_Superannuation_Fund__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Parent_Superannuation_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When defining an Employer Id Junction record this is the parent superannuation fund you are creating a payment entity-level employer Id record for.</description>
    <inlineHelpText>When defining an Employer Id Junction record this is the parent superannuation fund you are creating a payment entity-level employer Id record for.</inlineHelpText>
    <label>Parent Superannuation Fund</label>
    <referenceTo>tc9_pr__Superannuation_Fund__c</referenceTo>
    <relationshipLabel>Superannuation Funds (Parent Superannuation Fund)</relationshipLabel>
    <relationshipName>Parent_Superannuation_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>