force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payment Entity that the default fund belongs to</description>
    <inlineHelpText>The Payment Entity that the default fund belongs to</inlineHelpText>
    <label>Payment Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Entity</relationshipLabel>
    <relationshipName>Superannuation_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>