force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Product_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Product_Name__c</fullName>
    <description>The official Product Name of this Superannuation Fund (this may be different to the Fund name).</description>
    <inlineHelpText>The official Product Name of this Superannuation Fund (this may be different to the Fund name).</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>