force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Initial Validation Failed</fullName>
            </value>
            <value>
                <fullName>Validation Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>