force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Super_Fund_Lookup__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Super_Fund_Lookup__c</fullName>
    <description>View the search results for this Superannuation Fund in the Super Fund Lookup site, using its ABN.</description>
    <formula>IF( tc9_pr__Fund_ABN__c != null, HYPERLINK( $Label.tc9_pr__VMSG_AU_Super_Fund_Lookup &amp; SUBSTITUTE( tc9_pr__Fund_ABN__c, &apos; &apos;, &apos;&apos; ), &apos;Super Fund Lookup&apos;, &apos;_blank&apos; ), &apos;No Fund ABN Provided&apos; )</formula>
    <inlineHelpText>View the search results for this Superannuation Fund in the Super Fund Lookup site, using its ABN.</inlineHelpText>
    <label>Super Fund Lookup</label>
    <type>Text</type>
</CustomField>