force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/fields/tc9_pr__Unique_Superannuation_Identifier__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Unique_Superannuation_Identifier__c</fullName>
    <description>The Unique Superannuation Identifier (USI) of this Superannuation Fund.</description>
    <inlineHelpText>The Unique Superannuation Identifier (USI) of this Superannuation Fund.</inlineHelpText>
    <label>Unique Superannuation Identifier</label>
    <length>14</length>
    <type>Text</type>
</CustomField>