force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/recordTypes/tc9_pr__APRA_and_RSA_Funds.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__APRA_and_RSA_Funds</fullName>
    <active>true</active>
    <description>Use for Superannuation Funds regulated by the Australian Prudential Regulation Authority and Retirement Savings Accounts</description>
    <label>APRA and RSA Funds</label>
</RecordType>