force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/recordTypes/tc9_pr__Default_Employer_Fund.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Default_Employer_Fund</fullName>
    <active>true</active>
    <description>A default Superannuation Fund for the nominated Payment Entity</description>
    <label>Default Employer Fund</label>
</RecordType>