force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/recordTypes/tc9_pr__Employer_Id_Junction.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Employer_Id_Junction</fullName>
    <active>true</active>
    <description>A junction record between a Payment Entity and a Superannuation Fund</description>
    <label>Employer Id Junction</label>
</RecordType>