force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/recordTypes/tc9_pr__Self_Managed.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Self_Managed</fullName>
    <active>true</active>
    <description>Use for Self managed Superannuation Funds</description>
    <label>Self Managed</label>
</RecordType>