force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Fund_Name__c</columns>
    <columns>tc9_pr__Fund_Account_Name__c</columns>
    <columns>tc9_pr__Fund_Account_Number__c</columns>
    <columns>tc9_pr__Fund_ABN__c</columns>
    <columns>tc9_pr__Unique_Superannuation_Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>