force-app/main/default/objects/tc9_pr__Superannuation_Fund__c/listViews/tc9_pr__Funds_APRA.listView-meta.xml
<ListView>
    <fullName>tc9_pr__Funds_APRA</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Fund_Name__c</columns>
    <columns>tc9_pr__Fund_ABN__c</columns>
    <columns>tc9_pr__Unique_Superannuation_Identifier__c</columns>
    <columns>tc9_pr__Fund_Email__c</columns>
    <columns>tc9_pr__Fund_Phone__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>tc9_pr__Superannuation_Fund__c.tc9_pr__APRA_and_RSA_Funds</value>
    </filters>
    <label>Funds - APRA</label>
</ListView>